# TTSatModule

./: .gitignore  CMakeLists.txt  README.md  mux_uart_integration.md  sdkconfig.defaults  sdkconfig.defaults.dram_optimised
components/IP5561/: CMakeLists.txt  IP5561.c  IP5561.h  README.md
components/IP5561/priv_include/: IP5561_reg.h
components/audio_codec2/: CMakeLists.txt  codec2.c  kiss_fft.c  lpc.c  machdep_profile.c  phaseexp.c  quantise.c
components/audio_codec2/priv_include/: kiss_fft.h  machdep.h
components/audio_pipeline/: audio_element.c  audio_pipeline.c
components/audio_sal/include/: audio_mutex.h
components/audio_stream/: CMakeLists.txt  algorithm_stream.c
components/audio_stream/include/: aec_stream.h  algorithm_stream.h
components/bq27220/: CMakeLists.txt  bq27220.c  bq27220.h
components/esp-adf-libs/esp_codec/: audio_forge.c
components/esp-adf-libs/media_lib_sal/port/: media_lib_crypt_default.c
components/libgsm0710/: CMakeLists.txt  gsm0710.c  gsm0710.h
docs/: ANDROID_GATT_INTEGRATION.md  DIRECTORY_STRUCTURE_PROPOSAL.md  GATT_SERVICES_ARCHITECTURE.md  GATT_SERVICES_SUMMARY.md  REFACTOR_GUIDE.md  TT_OTA_FLOW.md  service_init_flow.md  sleep_mode_design.md  syslog_design.md  voice_frame_mode_cmd.md
main/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  main.c  partitions.csv  version.c  version.h
main/audio/: audiosvc.c  audiosvc.h  base64.c  base64.h  voice_packet_handler.c  voice_packet_handler.h
main/ble/: ble_conn_manager.c  ble_conn_manager.h  ble_gatt_server.c  ble_gatt_server.h  ble_spp_server.h  gatt_log_server.c  gatt_log_server.h  gatt_ota_server.c  gatt_ota_server.h  gatt_system_server.c  gatt_system_server.h  spp_at_server.c  spp_at_server.h  spp_voice_server.c  spp_voice_server.h
main/config/: user_params.c  user_params.h
main/system/: ble_monitor.c  ble_monitor.h  ota_partition.c  ota_partition.h  power_manage.c  power_manage.h  sleep_manager.c  sleep_manager.h  syslog.c  syslog.h  test_rtc_crc.c  test_temp_awake_race.c
main/tt/: gsm0710_manager.c  gsm0710_manager.h  tt_hardware.c  tt_hardware.h  tt_hardware_test.c  tt_module.c  tt_module.h  tt_module_ota.c  tt_module_ota.h
