idf_component_register(
    SRCS
        "ButterworthFilter.cpp"
        "SampleFilter.cpp"
        "codec2.c"
        "codec2.h"
        "interp.c"
        "lsp.c"
        "phase.c"
        "phaseexp.c"
        "sine.c"
        "nlp.c"
        "quantise.c"
        "pack.c"
        "postfilter.c"
        "fifo.c"
        "lpc.c"
        "dump.c"
        "kiss_fft.c"
        "codebook.c"
        "codebookd.c"
        "codebookdt.c"
        "codebookge.c"
        "codebooklspmelvq.c"
        "codebookmel.c"
        "codebookres.c"
        "codebookvq.c"
        "codebookvqanssi.c"
        "machdep_profile.c"
    INCLUDE_DIRS "."
    PRIV_INCLUDE_DIRS "priv_include"
    REQUIRES esp_timer
)